2017-10-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Modify this file. This file load attributes instead of classes.
	Remove classes variable.

	* tryXpath/scripts/try_xpath_content.js:
	Remove classes, savedClasses, savedContextClass, savedFocusedClass,
	savedFocusedClass and savedFocusedAncestorClasses variables.

	* tryXpath/background/try_xpath_background.js:
	Modify storage.onChanged listener.

	* tryXpath/pages/options.js:
	Remove isValidClass function.
	Define isValidAttrName function.
	Remove isValidClasses function.
	Define isValidAttrNames function.

	* tryXpath/background/try_xpath_background.js:
	Modify genericListener.listeners.loadOptions function.

	* tryXpath/pages/options.js:
	Remove defaultClasses constans.
	Remove elementClass, contextClass, focusedClass and ancestorClass
	variables.
	Define elementAttr, contextAttr, focusedAttr and ancestorAttr
	variables.
	Modify listener(window load).

	* tryXpath/pages/options.html:
	Change ids.

	* tryXpath/pages/options.js:
	Define defaultAttributes constans.

	* tryXpath/background/try_xpath_background.js:
	Remove genericListener.listeners.loadClasses function.
	Remove attributes variable.

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listeners.setContextInfo function.
	Modify this file. This file send requestRestorePopupState event
	instead of loadClasses event.

2017-10-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify focusItem. This function use attribute instead of class.
	Define removeAttrs function.
	Remove restoreAllClass function.
	Modify this file. This file use removeAttrs instead of restoreAllClass.
	Modify resetPrev function.
	Define dummyItem and dummyItems constans.
	Modify genericListener.listeners.setStyle. This function use attribute
	instead of class.


	* test/unit_test/jasmine/spec/spec.js:
	Define removeAttrFromItem function.
	Define removeAttrFromItems function.
